<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <parent>
    <groupId>io.github.filipemartinsdev</groupId>
    <artifactId>responsekit-parent</artifactId>
    <version>0.3.4</version>
  </parent>

  <name>Response Kit Spring</name>
  <description>A simple library with utility tools for Spring Based applications</description>

  <artifactId>responsekit-spring</artifactId>
  <packaging>jar</packaging>

  <dependencies>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-commons</artifactId>
      <version>3.5.0</version>
    </dependency>

    <dependency>
      <groupId>io.github.filipemartinsdev</groupId>
      <artifactId>responsekit-core</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
